[metadata]
name = fhir-populator
version = 1.3.0
author = IT Center for Clinical Research, University of Lübeck, Germany
author_email = j.wiedekopf@uni-luebeck.de
description = Load Simplifier packages into a FHIR server, quickly and consistently.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/itcr-uni-luebeck/fhir-populator
project_urls =
    Bug Tracker = https://github.com/itcr-uni-luebeck/fhir-populator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Healthcare Industry
    Topic :: Utilities

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
install_requires = 
  requests
  rich
  inquirer
  networkx
  python-slugify
  semver

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fhir-populator = fhir_populator:cli
